src/compose/compose_parser.output
Terminals unused in grammar

   CHAR
   VEC4
   MAT3
   MAT34
   MAT4
   SWITCH
   CASE
   DEFAULT
   BREAK
   RETURN
   '['
   ']'
   SCOPE


Grammar

    0 $accept: cmp_file $end

    1 cmp_file: def_list
    2         | import_list def_list

    3 import_list: import_stmt
    4            | import_list import_stmt

    5 import_stmt: IMPORT dotted_id ';'

    6 dotted_id: dotted_id_part
    7          | dotted_id '.' dotted_id_part

    8 dotted_id_part: IDENTIFIER

    9 def_list: def
   10         | def_list def

   11 def: ENTITY IDENTIFIER message_block
   12    | COMPONENT IDENTIFIER message_block
   13    | type IDENTIFIER '(' param_list ')' block

   14 message_block: '{' '}'
   15              | '{' message_list '}'

   16 message_list: message_prop
   17             | message_list message_prop

   18 message_prop: '#' IDENTIFIER '(' param_list ')' block
   19             | type '#' IDENTIFIER '=' expr ';'
   20             | type '#' IDENTIFIER ';'
   21             | type IDENTIFIER '=' expr ';'
   22             | type IDENTIFIER ';'
   23             | COMPONENTS component_block

   24 param_list: /* empty */
   25           | type IDENTIFIER
   26           | param_list ',' type IDENTIFIER

   27 component_block: '{' '}'
   28                | '{' component_member_list '}'

   29 component_member_list: component_member
   30                      | component_member_list component_member

   31 component_member: IDENTIFIER ';'
   32                 | IDENTIFIER '(' prop_init_list ')' ';'

   33 prop_init_list: /* empty */
   34               | prop_init
   35               | prop_init_list ',' prop_init

   36 prop_init: IDENTIFIER '=' expr

   37 block: '{' '}'
   38      | '{' stmt_list '}'

   39 stmt_list: stmt
   40          | stmt_list stmt

   41 stmt: IF '(' cond_expr ')' stmt
   42     | IF '(' cond_expr ')' stmt ELSE stmt
   43     | WHILE '(' cond_expr ')' stmt
   44     | DO do_stmt WHILE '(' cond_expr ')' ';'
   45     | FOR '(' expr_or_empty ';' cond_expr_or_empty ';' expr_or_empty ')' stmt
   46     | '@' target_expr '#' IDENTIFIER '=' expr ';'
   47     | '@' target_expr '#' IDENTIFIER '(' fun_params ')' ';'
   48     | block
   49     | expr ';'

   50 do_stmt: stmt

   51 target_expr: /* empty */
   52            | IDENTIFIER
   53            | INT_LITERAL

   54 expr: '(' expr ')'
   55     | type IDENTIFIER
   56     | type IDENTIFIER '=' expr
   57     | cond_expr
   58     | expr '+' expr
   59     | expr '-' expr
   60     | expr '*' expr
   61     | expr '/' expr
   62     | expr '%' expr
   63     | expr LSHIFT expr
   64     | expr RSHIFT expr
   65     | expr OR expr
   66     | expr AND expr
   67     | expr '|' expr
   68     | expr '^' expr
   69     | expr '&' expr
   70     | IDENTIFIER '=' expr
   71     | IDENTIFIER ADD_ASSIGN expr
   72     | IDENTIFIER SUB_ASSIGN expr
   73     | IDENTIFIER MUL_ASSIGN expr
   74     | IDENTIFIER DIV_ASSIGN expr
   75     | IDENTIFIER MOD_ASSIGN expr
   76     | IDENTIFIER LSHIFT_ASSIGN expr
   77     | IDENTIFIER RSHIFT_ASSIGN expr
   78     | IDENTIFIER AND_ASSIGN expr
   79     | IDENTIFIER XOR_ASSIGN expr
   80     | IDENTIFIER OR_ASSIGN expr
   81     | '!' expr
   82     | '~' expr
   83     | '-' expr
   84     | '#' IDENTIFIER
   85     | INC expr
   86     | DEC expr
   87     | expr INC
   88     | expr DEC
   89     | literal
   90     | IDENTIFIER '(' fun_params ')'
   91     | IDENTIFIER

   92 cond_expr: expr EQ expr
   93          | expr NEQ expr
   94          | expr LTE expr
   95          | expr GTE expr
   96          | expr '<' expr
   97          | expr '>' expr

   98 literal: INT_LITERAL
   99        | FLOAT_LITERAL
  100        | TRUE
  101        | FALSE

  102 expr_or_empty: /* empty */
  103              | expr

  104 cond_expr_or_empty: /* empty */
  105                   | cond_expr

  106 fun_params: /* empty */
  107           | expr
  108           | fun_params ',' expr

  109 type: INT
  110     | UINT
  111     | FLOAT
  112     | BOOL
  113     | VEC3
  114     | VOID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 81
'#' (35) 18 19 20 46 47 84
'%' (37) 62
'&' (38) 69
'(' (40) 13 18 32 41 42 43 44 45 47 54 90
')' (41) 13 18 32 41 42 43 44 45 47 54 90
'*' (42) 60
'+' (43) 58
',' (44) 26 35 108
'-' (45) 59 83
'.' (46) 7
'/' (47) 61
';' (59) 5 19 20 21 22 31 32 44 45 46 47 49
'<' (60) 96
'=' (61) 19 21 36 46 56 70
'>' (62) 97
'@' (64) 46 47
'[' (91)
']' (93)
'^' (94) 68
'{' (123) 14 15 27 28 37 38
'|' (124) 67
'}' (125) 14 15 27 28 37 38
'~' (126) 82
error (256)
IDENTIFIER (258) 8 11 12 13 18 19 20 21 22 25 26 31 32 36 46 47 52
    55 56 70 71 72 73 74 75 76 77 78 79 80 84 90 91
INT_LITERAL (259) 53 98
TRUE (260) 100
FALSE (261) 101
FLOAT_LITERAL (262) 99
INT (263) 109
UINT (264) 110
FLOAT (265) 111
BOOL (266) 112
CHAR (267)
VEC3 (268) 113
VEC4 (269)
MAT3 (270)
MAT34 (271)
MAT4 (272)
VOID (273) 114
IF (274) 41 42
SWITCH (275)
CASE (276)
DEFAULT (277)
FOR (278) 45
WHILE (279) 43 44
DO (280) 44
BREAK (281)
RETURN (282)
ENTITY (283) 11
COMPONENT (284) 12
COMPONENTS (285) 23
IMPORT (286) 5
THEN (287)
ELSE (288) 42
OR_ASSIGN (289) 80
XOR_ASSIGN (290) 79
AND_ASSIGN (291) 78
RSHIFT_ASSIGN (292) 77
LSHIFT_ASSIGN (293) 76
MOD_ASSIGN (294) 75
DIV_ASSIGN (295) 74
MUL_ASSIGN (296) 73
SUB_ASSIGN (297) 72
ADD_ASSIGN (298) 71
OR (299) 65
AND (300) 66
NEQ (301) 93
EQ (302) 92
GTE (303) 95
LTE (304) 94
RSHIFT (305) 64
LSHIFT (306) 63
DEC (307) 86 88
INC (308) 85 87
UMINUS (309)
POSTDEC (310)
POSTINC (311)
SCOPE (312)


Nonterminals, with rules where they appear

$accept (82)
    on left: 0
cmp_file (83)
    on left: 1 2, on right: 0
import_list (84)
    on left: 3 4, on right: 2 4
import_stmt (85)
    on left: 5, on right: 3 4
dotted_id (86)
    on left: 6 7, on right: 5 7
dotted_id_part (87)
    on left: 8, on right: 6 7
def_list (88)
    on left: 9 10, on right: 1 2 10
def (89)
    on left: 11 12 13, on right: 9 10
message_block (90)
    on left: 14 15, on right: 11 12
message_list (91)
    on left: 16 17, on right: 15 17
message_prop (92)
    on left: 18 19 20 21 22 23, on right: 16 17
param_list (93)
    on left: 24 25 26, on right: 13 18 26
component_block (94)
    on left: 27 28, on right: 23
component_member_list (95)
    on left: 29 30, on right: 28 30
component_member (96)
    on left: 31 32, on right: 29 30
prop_init_list (97)
    on left: 33 34 35, on right: 32 35
prop_init (98)
    on left: 36, on right: 34 35
block (99)
    on left: 37 38, on right: 13 18 48
stmt_list (100)
    on left: 39 40, on right: 38 40
stmt (101)
    on left: 41 42 43 44 45 46 47 48 49, on right: 39 40 41 42 43 45
    50
do_stmt (102)
    on left: 50, on right: 44
target_expr (103)
    on left: 51 52 53, on right: 46 47
expr (104)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91, on right:
    19 21 36 46 49 54 56 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 82 83 85 86 87 88 92 93 94 95 96
    97 103 107 108
cond_expr (105)
    on left: 92 93 94 95 96 97, on right: 41 42 43 44 57 105
literal (106)
    on left: 98 99 100 101, on right: 89
expr_or_empty (107)
    on left: 102 103, on right: 45
cond_expr_or_empty (108)
    on left: 104 105, on right: 45
fun_params (109)
    on left: 106 107 108, on right: 47 90 108
type (110)
    on left: 109 110 111 112 113 114, on right: 13 19 20 21 22 25 26
    55 56


State 0

    0 $accept: . cmp_file $end

    INT        shift, and go to state 1
    UINT       shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    VEC3       shift, and go to state 5
    VOID       shift, and go to state 6
    ENTITY     shift, and go to state 7
    COMPONENT  shift, and go to state 8
    IMPORT     shift, and go to state 9

    cmp_file     go to state 10
    import_list  go to state 11
    import_stmt  go to state 12
    def_list     go to state 13
    def          go to state 14
    type         go to state 15


State 1

  109 type: INT .

    $default  reduce using rule 109 (type)


State 2

  110 type: UINT .

    $default  reduce using rule 110 (type)


State 3

  111 type: FLOAT .

    $default  reduce using rule 111 (type)


State 4

  112 type: BOOL .

    $default  reduce using rule 112 (type)


State 5

  113 type: VEC3 .

    $default  reduce using rule 113 (type)


State 6

  114 type: VOID .

    $default  reduce using rule 114 (type)


State 7

   11 def: ENTITY . IDENTIFIER message_block

    IDENTIFIER  shift, and go to state 16


State 8

   12 def: COMPONENT . IDENTIFIER message_block

    IDENTIFIER  shift, and go to state 17


State 9

    5 import_stmt: IMPORT . dotted_id ';'

    IDENTIFIER  shift, and go to state 18

    dotted_id       go to state 19
    dotted_id_part  go to state 20


State 10

    0 $accept: cmp_file . $end

    $end  shift, and go to state 21


State 11

    2 cmp_file: import_list . def_list
    4 import_list: import_list . import_stmt

    INT        shift, and go to state 1
    UINT       shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    VEC3       shift, and go to state 5
    VOID       shift, and go to state 6
    ENTITY     shift, and go to state 7
    COMPONENT  shift, and go to state 8
    IMPORT     shift, and go to state 9

    import_stmt  go to state 22
    def_list     go to state 23
    def          go to state 14
    type         go to state 15


State 12

    3 import_list: import_stmt .

    $default  reduce using rule 3 (import_list)


State 13

    1 cmp_file: def_list .
   10 def_list: def_list . def

    INT        shift, and go to state 1
    UINT       shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    VEC3       shift, and go to state 5
    VOID       shift, and go to state 6
    ENTITY     shift, and go to state 7
    COMPONENT  shift, and go to state 8

    $default  reduce using rule 1 (cmp_file)

    def   go to state 24
    type  go to state 15


State 14

    9 def_list: def .

    $default  reduce using rule 9 (def_list)


State 15

   13 def: type . IDENTIFIER '(' param_list ')' block

    IDENTIFIER  shift, and go to state 25


State 16

   11 def: ENTITY IDENTIFIER . message_block

    '{'  shift, and go to state 26

    message_block  go to state 27


State 17

   12 def: COMPONENT IDENTIFIER . message_block

    '{'  shift, and go to state 26

    message_block  go to state 28


State 18

    8 dotted_id_part: IDENTIFIER .

    $default  reduce using rule 8 (dotted_id_part)


State 19

    5 import_stmt: IMPORT dotted_id . ';'
    7 dotted_id: dotted_id . '.' dotted_id_part

    '.'  shift, and go to state 29
    ';'  shift, and go to state 30


State 20

    6 dotted_id: dotted_id_part .

    $default  reduce using rule 6 (dotted_id)


State 21

    0 $accept: cmp_file $end .

    $default  accept


State 22

    4 import_list: import_list import_stmt .

    $default  reduce using rule 4 (import_list)


State 23

    2 cmp_file: import_list def_list .
   10 def_list: def_list . def

    INT        shift, and go to state 1
    UINT       shift, and go to state 2
    FLOAT      shift, and go to state 3
    BOOL       shift, and go to state 4
    VEC3       shift, and go to state 5
    VOID       shift, and go to state 6
    ENTITY     shift, and go to state 7
    COMPONENT  shift, and go to state 8

    $default  reduce using rule 2 (cmp_file)

    def   go to state 24
    type  go to state 15


State 24

   10 def_list: def_list def .

    $default  reduce using rule 10 (def_list)


State 25

   13 def: type IDENTIFIER . '(' param_list ')' block

    '('  shift, and go to state 31


State 26

   14 message_block: '{' . '}'
   15              | '{' . message_list '}'

    INT         shift, and go to state 1
    UINT        shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    VEC3        shift, and go to state 5
    VOID        shift, and go to state 6
    COMPONENTS  shift, and go to state 32
    '#'         shift, and go to state 33
    '}'         shift, and go to state 34

    message_list  go to state 35
    message_prop  go to state 36
    type          go to state 37


State 27

   11 def: ENTITY IDENTIFIER message_block .

    $default  reduce using rule 11 (def)


State 28

   12 def: COMPONENT IDENTIFIER message_block .

    $default  reduce using rule 12 (def)


State 29

    7 dotted_id: dotted_id '.' . dotted_id_part

    IDENTIFIER  shift, and go to state 18

    dotted_id_part  go to state 38


State 30

    5 import_stmt: IMPORT dotted_id ';' .

    $default  reduce using rule 5 (import_stmt)


State 31

   13 def: type IDENTIFIER '(' . param_list ')' block

    INT    shift, and go to state 1
    UINT   shift, and go to state 2
    FLOAT  shift, and go to state 3
    BOOL   shift, and go to state 4
    VEC3   shift, and go to state 5
    VOID   shift, and go to state 6

    $default  reduce using rule 24 (param_list)

    param_list  go to state 39
    type        go to state 40


State 32

   23 message_prop: COMPONENTS . component_block

    '{'  shift, and go to state 41

    component_block  go to state 42


State 33

   18 message_prop: '#' . IDENTIFIER '(' param_list ')' block

    IDENTIFIER  shift, and go to state 43


State 34

   14 message_block: '{' '}' .

    $default  reduce using rule 14 (message_block)


State 35

   15 message_block: '{' message_list . '}'
   17 message_list: message_list . message_prop

    INT         shift, and go to state 1
    UINT        shift, and go to state 2
    FLOAT       shift, and go to state 3
    BOOL        shift, and go to state 4
    VEC3        shift, and go to state 5
    VOID        shift, and go to state 6
    COMPONENTS  shift, and go to state 32
    '#'         shift, and go to state 33
    '}'         shift, and go to state 44

    message_prop  go to state 45
    type          go to state 37


State 36

   16 message_list: message_prop .

    $default  reduce using rule 16 (message_list)


State 37

   19 message_prop: type . '#' IDENTIFIER '=' expr ';'
   20             | type . '#' IDENTIFIER ';'
   21             | type . IDENTIFIER '=' expr ';'
   22             | type . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 46
    '#'         shift, and go to state 47


State 38

    7 dotted_id: dotted_id '.' dotted_id_part .

    $default  reduce using rule 7 (dotted_id)


State 39

   13 def: type IDENTIFIER '(' param_list . ')' block
   26 param_list: param_list . ',' type IDENTIFIER

    ')'  shift, and go to state 48
    ','  shift, and go to state 49


State 40

   25 param_list: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 50


State 41

   27 component_block: '{' . '}'
   28                | '{' . component_member_list '}'

    IDENTIFIER  shift, and go to state 51
    '}'         shift, and go to state 52

    component_member_list  go to state 53
    component_member       go to state 54


State 42

   23 message_prop: COMPONENTS component_block .

    $default  reduce using rule 23 (message_prop)


State 43

   18 message_prop: '#' IDENTIFIER . '(' param_list ')' block

    '('  shift, and go to state 55


State 44

   15 message_block: '{' message_list '}' .

    $default  reduce using rule 15 (message_block)


State 45

   17 message_list: message_list message_prop .

    $default  reduce using rule 17 (message_list)


State 46

   21 message_prop: type IDENTIFIER . '=' expr ';'
   22             | type IDENTIFIER . ';'

    '='  shift, and go to state 56
    ';'  shift, and go to state 57


State 47

   19 message_prop: type '#' . IDENTIFIER '=' expr ';'
   20             | type '#' . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 58


State 48

   13 def: type IDENTIFIER '(' param_list ')' . block

    '{'  shift, and go to state 59

    block  go to state 60


State 49

   26 param_list: param_list ',' . type IDENTIFIER

    INT    shift, and go to state 1
    UINT   shift, and go to state 2
    FLOAT  shift, and go to state 3
    BOOL   shift, and go to state 4
    VEC3   shift, and go to state 5
    VOID   shift, and go to state 6

    type  go to state 61


State 50

   25 param_list: type IDENTIFIER .

    $default  reduce using rule 25 (param_list)


State 51

   31 component_member: IDENTIFIER . ';'
   32                 | IDENTIFIER . '(' prop_init_list ')' ';'

    '('  shift, and go to state 62
    ';'  shift, and go to state 63


State 52

   27 component_block: '{' '}' .

    $default  reduce using rule 27 (component_block)


State 53

   28 component_block: '{' component_member_list . '}'
   30 component_member_list: component_member_list . component_member
